fix(style): Fix the signin/signup width on mobile devices.
The minimum width of a `.card` element was 420px, which caused
layout chaos on mobile devices.

The fix is to only set the 420px width if the layout is `big`.

fixes mozilla/fxa-content-server#3060

--- a/packages/fxa-content-server/app/styles/_layout.scss
+++ b/packages/fxa-content-server/app/styles/_layout.scss
@@ -6,7 +6,9 @@
   text-align: center;
 
   &.card {
-    width: 420px;
+    @include respond-to('big') {
+      width: 420px;
+    }
   }
 
   &.panel {
